--- a/Client/src/assets/css/main.css
+++ b/Client/src/assets/css/main.css
@@ -7,7 +7,7 @@ html, body {
 body {
 	background-size: cover;
 	background-attachment: fixed;
-	background-image: url("../img/wp/wallpaper.jpg");
+	background-color: rgb(12, 12, 12);
 
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
 		sans-serif;
