--- a/Client/src/components/nav/Nav.module.css
+++ b/Client/src/components/nav/Nav.module.css
@@ -1,29 +1,69 @@
 .nav{
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.1);
     display: flex;
+    border-radius: 3px;
+}
+
+.sobre{
+    color: white;
+    margin: auto;
+    margin-right: 1em;
+    margin-left: 1em;
+    &:hover{
+        cursor: pointer;
+        text-decoration: underline;
+
+    }
 }
 
 .logo{
     width: 10em;
-    margin-left: 1em;
+    margin: auto;
 }
 
 .search{
     margin: auto;
+    margin-right: 1em;
+    margin-left: 0;
+    display: flex;
 }
 
 .botonBuscar{
+    width: 2em;
+    margin: auto;
     &:hover{
         cursor: pointer;
     }
 }
 
+.input{
+    margin: auto;
+    background-color: rgba(255, 255, 255, 0.2);
+    color: white;
+    font-size: 1.5em;
+    width: 7.4em;
+    &::placeholder{
+        color: rgb(194, 194, 194);
+    }
+}
+
+.div{
+    margin: auto 0;
+    width: 3.5px;
+    background-color: white;
+    height: 3em;
+    border-radius: 2px;
+}
+
 .iniciar{
-    text-decoration: underline;
+    color: white;
     margin: auto;
     margin-right: 1em;
+    margin-left: 1em;
     &:hover{
         cursor: pointer;
+        text-decoration: underline;
+
     }
 }
 
@@ -31,12 +71,13 @@
     height: min-content;
     margin: auto;
     margin-right: 1em;
+    margin-left: 1em;
 }
 
 .contador{
     position: absolute;
     margin: 5px 1em 0 01em;
-    color: rgb(195, 3, 3);
+    color: white;
     &:hover{
         cursor: pointer;
     }
@@ -44,4 +85,7 @@
 
 .carrito{
     width: 3em;
+    &:hover{
+        cursor: pointer;
+    }
 }
