--- a/Client/src/components/Pagination/pagination.styles.css
+++ b/Client/src/components/Pagination/pagination.styles.css
@@ -1,45 +1,45 @@
 .div_pagin {
-    margin: 7px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    list-style-type: none;
-    cursor: pointer;
-    gap: 0.1rem;
-    z-index: 0;
-    max-width: 800px;
-  }
-  
-   .div_pagin a {
-    text-align: center;
-    user-select: none;
-    margin: 20px 5px;
-    font-size: 14px;
-    width: 32px;
-    display: block;
-    padding: 0.5rem .3rem;
-    text-decoration: none;
-    border-radius: 0.2rem; 
-     border: 0.0625rem solid #d7d7d7; 
-    box-shadow: 6px 7px 8px -6px rgba(212, 203, 68, 0.7); 
-    color: white; 
-   background-color: rgba(241, 206, 48, 0.7);
-  } 
-  
-   .a:hover{
-    text-align: center;
-    user-select: none;
-    margin: 20px 5px;
-    font-size: 14px;
-    width: 32px;
-    display: block;
-    padding: 0.5rem .3rem;
-    text-decoration: none;
-    border-radius: 0.2rem;
-    border: 2px solid #d7d7d7;
-     background-color: rgb(253, 255, 253);
-    color: #f5c52e;
-     border-color: #ebe72f;
-    transform: scale(1.3,1.3);
-  } 
+  margin: 7px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+  cursor: pointer;
+  gap: 0.1rem;
+  z-index: 0;
+}
+
+.div_pagin a {
+  text-align: center;
+  user-select: none;
+  margin: 20px 5px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 14px;
+  width: 32px;
+  display: block;
+  padding: 0.5rem 0.3rem;
+  text-decoration: none;
+  border-radius: 0.2rem;
+  border: 0.0625rem solid #d7d7d7;
+  box-shadow: 6px 7px 8px -6px #c5aa52;
+  color: black;
+  background-color: #f5c52e;
+}
+
+.a:hover {
+  text-align: center;
+  user-select: none;
+  margin: 20px 5px;
+  font-size: 14px;
+  width: 32px;
+  display: block;
+  padding: 0.5rem 0.3rem;
+  text-decoration: none;
+  border-radius: 0.2rem;
+  border: 2px solid #d7d7d7;
+  background-color: rgb(253, 255, 253);
+  color: #f5c52e;
+  border-color: #ebe72f;
+  transform: scale(1.3, 1.3);
+}
