--- a/Client/src/components/Card/Card.css
+++ b/Client/src/components/Card/Card.css
@@ -1,10 +1,31 @@
+.card-container {
+  position: relative;
+  width: 380px;
+  height: 580px;
+}
 .card {
   position: relative;
-  width: 320px;
+  width: 330px;
   height: 480px;
   background: #191919;
   border-radius: 20px;
   overflow: hidden;
+}
+.discountCircle {
+  position: absolute;
+  top: -18px; /* Ajusta la posición vertical según tus preferencias */
+  right: 25px; /* Ajusta la posición horizontal según tus preferencias */
+  background-color: #ff0000;
+  color: #ffce00;
+  border-radius: 70%;
+  width: 65px; /* Ajusta el tamaño del círculo según tus preferencias */
+  height: 65px; /* Ajusta el tamaño del círculo según tus preferencias */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  z-index: 3;
+  cursor: default;
 }
 
 .card::before {
@@ -57,6 +78,7 @@
   color: white;
   font-weight: 500;
   text-transform: uppercase;
+  cursor: default;
 }
 
 .card .contentBox .price {
@@ -65,6 +87,27 @@
   font-weight: 700;
   letter-spacing: 1px;
   margin: 0;
+  cursor: default;
+}
+
+.card .contentBox .price-line {
+  font-size: 24px;
+  color: white;
+  font-weight: 700;
+  letter-spacing: 1px;
+  margin: 0;
+  cursor: default;
+}
+
+.price-line p {
+  display: inline-block;
+  margin-right: 10px; /* Ajusta el espaciado entre los elementos según tus preferencias */
+}
+
+.antes {
+  font-size: 16px;
+  text-decoration: line-through;
+  opacity: 0.4;
 }
 
 .card .contentBox .buy {
