--- a/Client/src/components/nav/Nav.module.css
+++ b/Client/src/components/nav/Nav.module.css
@@ -43,32 +43,6 @@
     visibility: hidden;
 }
 
-.search{
-    margin: auto;
-    margin-right: 1em;
-    margin-left: 0;
-    display: flex;
-}
-
-.botonBuscar{
-    width: 2em;
-    margin: auto;
-    &:hover{
-        cursor: pointer;
-    }
-}
-
-.input{
-    margin: auto;
-    background-color: rgba(255, 255, 255, 0.2);
-    color: white;
-    font-size: 1.5em;
-    width: 7.4em;
-    &::placeholder{
-        color: rgb(194, 194, 194);
-    }
-}
-
 .div{
     margin: auto 0;
     width: 3.5px;
@@ -110,4 +84,32 @@
     &:hover{
         cursor: pointer;
     }
+}
+
+.perfil{
+    width: 2.8em;
+    margin-left: 1em;
+    border-radius: 5px;
+    &:hover{
+        cursor: pointer;
+    }
+}
+
+.admin{
+    color: white;
+    margin: auto;
+    margin-right: 1em;
+    margin-left: 1em;
+    &:hover{
+        cursor: pointer;
+        text-decoration: underline;
+
+    }
+}
+
+.adminHidden{
+    margin: auto;
+    margin-right: 1em;
+    margin-left: 1em;
+    visibility: hidden;
 }
