--- a/Client/src/components/Aside/Aside.css
+++ b/Client/src/components/Aside/Aside.css
@@ -7,6 +7,7 @@ aside {
 
 /* Estilo para los botones dentro del aside */
 aside button {
+  font-size: 20px;
   display: block;
   width: 100%;
   padding: 10px 0;
