--- a/Client/src/components/CrearProducto/CrearProducto.css
+++ b/Client/src/components/CrearProducto/CrearProducto.css
@@ -1,50 +1,90 @@
-/* FormularioProducto.css */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
+
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+.contenedor {
+  width: 80%;
+  min-height: 100vh;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  box-sizing: border-box;
+}
+
 .formulario {
-  width: 600px;
-  margin: 0 auto;
-  margin-top: 15px;
-  padding: 0 20px;
-  border: 1px solid #ccc;
+  width: 100%;
+  margin-top: 20px;
+  background: #fff;
   border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  padding-right: 40px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
-.label {
+.formulario > div {
+  margin-bottom: 20px;
+}
+
+.formulario label {
   display: block;
-  margin: 5px 0;
-  color: #fff;
+  font-weight: 600;
+  font-size: 14px;
+  margin-bottom: 5px;
+  color: #1f1f1f;
 }
 
-.input {
+.formulario input,
+.formulario textarea {
+  font-family: "Open Sans", sans-serif;
   width: 100%;
-  padding: 5px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
+  border-radius: 5px;
+  border: 2px solid #e2e2e2;
+  font-size: 18px;
+  padding: 10px;
+  margin-bottom: 5px;
+  color: #1f1f1f;
 }
 
-.textarea {
-  width: 100%;
-  padding: 5px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
+.formulario input:focus {
+  outline: none;
+  border: 2px solid #0085ff;
 }
 
-.button {
-  background: #007bff;
-  color: #fff;
+.formulario .error {
+  color: #e92b2d;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.formulario button[type="submit"] {
+  display: block;
+  background: #0085ff;
+  font-weight: 600;
+  font-family: "Open Sans", sans-serif;
   border: none;
-  padding: 10px 20px;
-  border-radius: 3px;
   cursor: pointer;
   width: 100%;
-  margin: 10px 0;
+  height: auto;
+  padding: 10px;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 16px;
+  transition: 0.3s ease all;
 }
 
-span {
-  color: red;
-  font-size: 14px;
-  display: block;
-  margin-top: 5px;
+.formulario button[type="submit"]:hover {
+  background: #0051ff;
+}
+
+.formulario .exito {
+  text-align: center;
+  font-size: 20px;
+  padding-top: 20px;
+  color: #02a802;
+}
+
+.formulario input[type="radio"] {
+  width: auto;
 }
