--- a/Client/src/views/Detail/Detail.module.css
+++ b/Client/src/views/Detail/Detail.module.css
@@ -33,6 +33,7 @@
     width: 60%;
     margin: 0 0 1em 0;
     height: 2em;
+    background-color: rgb(255, 255, 255);
     &:hover{
         cursor: pointer;
     }
