--- a/Client/src/components/Pagination/pagination.styles.css
+++ b/Client/src/components/Pagination/pagination.styles.css
@@ -25,9 +25,13 @@
   box-shadow: 6px 7px 8px -6px #c5aa52;
   color: black;
   background-color: #f5c52e;
+  transform: translate(0);
+  transition: transform 0.25s ease-out;
+  -moz-osx-font-smoothing: grayscale;
+  backface-visibility: hidden;
 }
 
-.a:hover {
+.div_pagin a:hover {
   text-align: center;
   user-select: none;
   margin: 20px 5px;
@@ -38,8 +42,8 @@
   text-decoration: none;
   border-radius: 0.2rem;
   border: 2px solid #d7d7d7;
-  background-color: rgb(253, 255, 253);
+  background-color: rgb(49, 49, 49);
   color: #f5c52e;
   border-color: #ebe72f;
-  transform: scale(1.3, 1.3);
+  transform: scale(1.25);
 }
