--- a/Client/src/components/App.css
+++ b/Client/src/components/App.css
@@ -6,12 +6,6 @@
     margin: 0;
 }
 
-.background_home{
-    background-image: url(../assets/img/home/FotoPrincipalHome.png);
-    background-size: cover;
-    min-height: 163vh;
-}
-
 .spaceNav{
-    height: 4.3em;
+    height: 10vh;
 }
