--- a/Client/src/components/CrearProducto/CrearProducto.css
+++ b/Client/src/components/CrearProducto/CrearProducto.css
@@ -5,8 +5,10 @@ body {
 }
 
 .contenedor {
-  width: 80%;
-  min-height: 100vh;
+  width: 85%;
+  height: 100%;
+  max-height: 100%;
+  max-width: 1280px;
   display: flex;
   align-items: flex-start;
   justify-content: center;
