--- a/Client/src/views/EdicionProducto/EdicionProducto.css
+++ b/Client/src/views/EdicionProducto/EdicionProducto.css
@@ -1,8 +1,9 @@
 .contenedor2 {
-  margin: auto;
+  margin-left: 60px;
 }
 
 .formulario2 {
+  align-items: center;
   width: 90%;
   margin-top: 20px;
   background: #fff;
