--- a/Client/src/components/IngresarAcceso/perfil.css
+++ b/Client/src/components/IngresarAcceso/perfil.css
@@ -1,34 +1,28 @@
 .perfil {
-  display: flex;
-  background-color: rgba(255, 255, 255, 0.4);
   flex-direction: row;
   -moz-osx-font-smoothing: grayscale;
   justify-content: center;
-  width: 60%;
-  height: 27em;
-  margin: auto;
-  margin-top: 5em;
+  margin-left: 15em;
+  margin-top: 2em;
 }
 
-.div_txt {
-  width: 100%;
-}
-
-.txt{
-  margin-left: 6em;
-}
-
-.txt_info{
-  color:white;
-  margin-left: 6em;
-  margin-top: -5px;
+.contenedor {
+  width: 90%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  -moz-osx-font-smoothing: grayscale;
+  flex-direction: row;
+  align-items: flex-start;
+  box-sizing: border-box;
 }
 
 .titulo {
-  margin-left: 3em;
+  margin-top: -1px;
+  margin-bottom: 3px;
   color: black;
   font-size: 2em;
-  text-align: left;
+  text-align: center;
   display: block;
 }
 
@@ -36,7 +30,7 @@
   margin: 2em 0 0 4em;
   border: 8px solid black;
   border-radius: 200px;
-  height: 300px;
+  height: 200px;
   transform: translate(0);
   transition: transform 0.25s ease-out;
   cursor: pointer;
@@ -48,25 +42,33 @@
   transform: scale(1.05);
 }
 
-.cloudinary {
+/* .cloudinary {
   margin: 0;
   display: flex;
   position: absolute;
-  margin-right: 27em;
-  margin-top: 23em;
+  margin-right: 10em;
+} */
+
+/* .txt{
+  background-color: aqua;
+  margin-left: 6em;
+  display: block;
+  font-weight: 700;
+  padding: 10px;
+  cursor: pointer;
+} */
+
+/* .txt_info{
+  color:white;
+  margin-left: 6em;
+  margin-top: -5px;
 }
+
 
 .cambiarImg{
   font-size: 1em;
   margin-top: -0.1em;
   margin-right: 0.3em;
-}
-
-.btn{
-  margin-left: 10em;
-  margin-top: 2em;
-}
-
-
+} */
 
 
