--- a/Client/src/components/App.css
+++ b/Client/src/components/App.css
@@ -7,7 +7,8 @@
 }
 
 .spaceNav{
-  height: 8.3vh;
+  background-color: aqua;
+  height: 8.4vh;
 }
 
 /* En tu archivo CSS global o en el archivo de estilos de tu componente */
