--- a/Client/src/views/Carrito/Carrito.module.css
+++ b/Client/src/views/Carrito/Carrito.module.css
@@ -42,16 +42,28 @@
 }
 
 .noProducto{
-    background-color: rgba(0, 0, 0, 0.8);
-    height: 6em;
     display: flex;
-    margin-bottom: 10px;
-    border: 1px solid white;
+    flex-direction: column;
+    margin: auto;
+    height: 70vh;
 }
 
 .noProductoH1{
     color: rgba(255, 255, 0, 0.5);
     margin: auto;
-    margin-left: 2em;
+    text-align: center;
+    margin-bottom: 0;
+    font-size: 4em;
+}
+
+.noProductoH4{
+    margin: auto;
+    margin-top: 1em;
+    color: white;
+    font-size: 1em;
+    &:hover{
+        cursor: pointer;
+        text-decoration: underline;
+    }
 }
 
