--- a/Client/src/views/Carrito/Producto/Producto.module.css
+++ b/Client/src/views/Carrito/Producto/Producto.module.css
@@ -60,14 +60,58 @@
 }
 
 .divCant{
-    text-align: center;
     width: 13%;
     margin: auto;
+    margin-left: 2em;
+    display: flex;
+    border: 1px solid white;
+}
+
+.divMas{
+    margin: auto;
+    width: 2em;
+    height: 2em;
+    border: 1px solid black;
+    user-select: none;
+    &:hover{
+        cursor: pointer;
+        border: 1px solid white;
+    }
+}
+
+.mas{
+    font-size: 2em;
+    margin: 0;
+    color: white;
+    position: absolute;
+    transform: translateX(0.2em) translateY(-0.2em);
 }
 
 .cant{
+    text-align: center;
+    margin: auto;
+    color: white;
+    font-size: 1.3em;
+}
+
+.divMenos{
+    margin: auto;
     width: 2em;
-    font-size: 1em;
+    height: 2em;
+    border: 1px solid black;
+    user-select: none;
+    &:hover{
+        cursor: pointer;
+        border: 1px solid white;
+    }
+}
+
+.menos{
+    font-size: 2em;
+    margin: 0;
+    color: white;
+    position: absolute;
+    transform: translateX(0.3em) translateY(-0.27em);
 }
 
 .stock{
