--- a/Client/src/views/CatalogoAdmin/CatalogoAdmin.css
+++ b/Client/src/views/CatalogoAdmin/CatalogoAdmin.css
@@ -2,3 +2,13 @@
   display: flex;
   align-items: stretch;
 }
+
+.Image {
+  width: 250px;
+  height: 250px;
+}
+
+.DivImage {
+  text-align: center;
+  border-radius: 100px;
+}
