--- a/Client/src/views/Home/Preguntas/Preguntas.module.css
+++ b/Client/src/views/Home/Preguntas/Preguntas.module.css
@@ -3,6 +3,7 @@
 }
 
 .preguntasFrec{
+    user-select: none;
     margin-left: 0.5em;
     font-family: Open-Sans;
     color: rgba(245, 196, 44, 0.8);
@@ -10,6 +11,7 @@
 }
 
 .divPregunta{
+    user-select: none;
     width: 90%;
     background-color: white;
     border-radius: 1em;
@@ -36,13 +38,22 @@
     transform: translateY(-0.4em);
 }
 
+.menos{
+    color: rgb(182, 138, 8);
+    margin: auto;
+    margin-right: 10px;
+    font-size: 8em;
+    transform: translateX(-0.1em) translateY(-0.48em);
+}
+
 .divRespuesta{
     height: 3em;
     margin: auto;
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: rgba(255, 255, 255, 0.03);
     width: 87%;
     border-radius: 0px 0px 10px 10px;
     display: flex;
+    border: 1px solid yellow;
 }
 
 .respuesta{
