--- a/Client/src/components/PaginationAdmin/PaginationAdmin.css
+++ b/Client/src/components/PaginationAdmin/PaginationAdmin.css
@@ -10,7 +10,7 @@
   z-index: 0;
 }
 
-.div_pagin a {
+.div_pagin button {
   text-align: center;
   user-select: none;
   margin: 20px 5px;
@@ -27,7 +27,7 @@
   background-color: #f5c52e;
 }
 
-.a:hover {
+.div_pagin button:hover {
   text-align: center;
   user-select: none;
   margin: 20px 5px;
@@ -35,11 +35,10 @@
   width: 32px;
   display: block;
   padding: 0.5rem 0.3rem;
-  text-decoration: none;
-  border-radius: 0.2rem;
-  border: 2px solid #d7d7d7;
-  background-color: rgb(253, 255, 253);
-  color: #f5c52e;
-  border-color: #ebe72f;
   transform: scale(1.3, 1.3);
+}
+
+.div_pagin button.active {
+  background-color: black;
+  color: #f5c52e;
 }
