--- a/Client/src/assets/css/main.css
+++ b/Client/src/assets/css/main.css
@@ -8,7 +8,7 @@ body {
 body {
   background-size: cover;
   background-attachment: fixed;
-  background-color: black;
+  background-color: rgb(12,12,12);
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
