--- a/Client/src/components/App.css
+++ b/Client/src/components/App.css
@@ -7,7 +7,14 @@
 }
 
 .spaceNav{
-  height: 8.4vh;
+  display: flex;
+}
+
+.logoSpace{
+  width: 10em;
+  margin: 8px auto;
+  height: min-content;
+  visibility: hidden;
 }
 
 /* En tu archivo CSS global o en el archivo de estilos de tu componente */
