--- a/Client/src/components/Aside/Aside.css
+++ b/Client/src/components/Aside/Aside.css
@@ -1,8 +1,15 @@
 /* Estilo para el aside */
-aside {
+.admin {
   padding: 20px;
   width: 15%;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.catalogo {
+  width: auto;
+  padding: 10px;
+  background-color: rgb(37, 36, 36);
+  box-shadow: 0 0 5px rgba(37, 36, 36, 0.2);
 }
 
 /* Estilo para los botones dentro del aside */
