Se realiza ajuste de la vista Administrador

--- a/Client/src/components/Item/Item.css
+++ b/Client/src/components/Item/Item.css
@@ -46,6 +46,7 @@
   background-color: var(--app-content-secondary-color);
   margin-bottom: 20px;
   top: 0;
+  height: 30px;
 }
 .tableView .products-row {
   display: flex;
@@ -63,6 +64,7 @@
   font-size: 14px;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 a {
@@ -102,6 +104,6 @@ button {
   width: auto;
   height: auto;
   background-color: red;
-  font-size: 12px;
+  font-size: 16px;
   color: #fff;
 }
