--- a/Client/src/components/IngresarAcceso/perfil.css
+++ b/Client/src/components/IngresarAcceso/perfil.css
@@ -88,6 +88,12 @@
 }
 
 .disabled_btn_user {
+  width: 10em;
+  height: 3em;
+  margin-left: 22em;
+  margin-top: -1em;
+  border-radius: 5px;
+  font-size: 16px;
   background-color: #ccc; 
   color: #999; 
   cursor: not-allowed; 
