--- a/Client/src/views/SuccessCancel/SuccessCancel.module.css
+++ b/Client/src/views/SuccessCancel/SuccessCancel.module.css
@@ -1,3 +1,36 @@
 .SuccessCancel{
-    background-color: aquamarine;
+    display: flex;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.check{
+    width: 8em;
+    margin: auto;
+    margin-bottom: 0.5em;
+}
+
+.muchas{
+    color: rgba(255, 255, 0, 0.5);
+    margin: 0.5em auto 0.5em auto;
+    text-align: center;
+    font-size: 4.5em;
+}
+
+.orden{
+    margin: 0.5em auto;
+    color: rgba(255, 255, 255, 0.4);
+    font-size: 2.5em;
+    /* -webkit-text-stroke: 0.5px rgba(254, 254, 172, 0.864); */
+}
+
+.volver{
+    margin: auto;
+    margin-top: 1em;
+    color: white;
+    font-size: 1em;
+    &:hover{
+        cursor: pointer;
+        text-decoration: underline;
+    }
 }
