--- a/Client/src/components/CrearProducto/CrearProducto.css
+++ b/Client/src/components/CrearProducto/CrearProducto.css
@@ -96,13 +96,15 @@ body {
   width: auto;
 }
 
-.disabled_btn_user {
-  width: 10em;
-  height: 3em;
-  margin-left: 22em;
-  margin-top: -1em;
+.disabled_btn_product {
+  display: block;
+  width: 100%;
+  height: auto;
+  font-weight: 600;
+  font-family: "Open Sans", sans-serif;
+  padding: 10px;
   border-radius: 5px;
-  font-size: 16px;
+  border: none;
   background-color: #ccc;
   color: #999;
   cursor: not-allowed;
