--- a/Client/src/components/Louder/louder.css
+++ b/Client/src/components/Louder/louder.css
@@ -1,8 +1,15 @@
+.louder {
+  display: flex;
+  justify-content: center;
+  margin-top: 20%;
+}
+
 .lds-dual-ring {
   display: inline-block;
   width: 80px;
   height: 80px;
 }
+
 .lds-dual-ring:after {
   content: " ";
   display: block;
@@ -14,6 +21,7 @@
   border-color: #fff transparent #fff transparent;
   animation: lds-dual-ring 1.2s linear infinite;
 }
+
 @keyframes lds-dual-ring {
   0% {
     transform: rotate(0deg);
