--- a/Client/src/views/SuccessCancel/SuccessCancel.module.css
+++ b/Client/src/views/SuccessCancel/SuccessCancel.module.css
@@ -1,7 +1,7 @@
 .SuccessCancel{
     display: flex;
     flex-direction: column;
-    height: 70vh;
+    height: 85vh;
 }
 
 .check{
@@ -18,7 +18,9 @@
 }
 
 .orden{
+    width: 80%;
     margin: 0.5em auto;
+    text-align: center;
     color: rgba(255, 255, 255, 0.4);
     font-size: 2.5em;
     /* -webkit-text-stroke: 0.5px rgba(254, 254, 172, 0.864); */
