--- a/Client/src/components/IngresarAcceso/login.css
+++ b/Client/src/components/IngresarAcceso/login.css
@@ -1,17 +1,10 @@
 .btnIngreso {
-    height: 80vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-button {
-    border: none;
-    font-size: 1.5em;
-    width: 8em;
-    height: 2em;
-    background-color: rgb(245, 196, 44);
-    &:hover {
-        cursor: pointer;
-    }
+.btnLogOut {
+  background-color: red;
 }
