--- a/Client/src/views/Success/Success.module.css
+++ b/Client/src/views/Success/Success.module.css
@@ -19,11 +19,18 @@
 
 .orden{
     width: 80%;
-    margin: 0.5em auto;
+    margin: 0.5em auto 0 auto;
     text-align: center;
     color: rgba(255, 255, 255, 0.4);
     font-size: 2.5em;
-    /* -webkit-text-stroke: 0.5px rgba(254, 254, 172, 0.864); */
+}
+
+.address{
+    width: 80%;
+    margin: 0 auto 0.5em auto;
+    text-align: center;
+    color: rgba(255, 255, 100, 0.4);
+    font-size: 2.5em;
 }
 
 .volver{
